--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#sidebar a.active {
+  color: #ffffff;
+  background-color: #16a34a;
+  border-radius: 1.5rem;
+}
